--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "front:dev": "turbo run dev --filter=./apps/web/",
+    "front:storybook": "turbo run storybook --filter=./apps/web/",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@repo/eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
     "turbo": "latest"
   },
