--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ build
 .DS_Store
 *.pem
 
+
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -34,3 +36,9 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# TypeScript declaration files
+*.d.ts
+*.d.ts.map
+*.js
+*.js.map
