--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -9,8 +9,8 @@
   ],
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "daisyui": "^4.11.1",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "@nextui-org/theme": "^2.2.9"
   }
 }
