--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@turbo/gen": "^1.9.7",
     "dotenv-cli": "^7.4.2",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "prettier": "^2.5.1",
     "turbo": "latest"
   },
