--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.2",
+    "framer-motion": "^11.5.6",
     "next": "13.4.19",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
