fix(app)(api): adding configservice in api to load envs + adding username check in auth

--- a/turbo.json
+++ b/turbo.json
@@ -10,43 +10,15 @@
     "lint": {},
     "dev": {
       "cache": false,
-      "persistent": true,
-      "inputs": [
-        "DB_HOST",
-        "DB_PORT",
-        "DB_USERNAME",
-        "DB_PASSWORD",
-        "DB_DATABASE",
-        ".env"
-      ],
-      "env": [
-        "DB_HOST",
-        "DB_PORT",
-        "DB_USERNAME",
-        "DB_PASSWORD",
-        "DB_DATABASE",
-        "API_JWT_SECRET"
-      ]
+      "persistent": true
     },
     "api:dev": {
       "cache": false,
-      "persistent": true,
-      "inputs": [
-        "DB_HOST",
-        "DB_PORT",
-        "DB_USERNAME",
-        "DB_PASSWORD",
-        "DB_DATABASE",
-        ".env"
-      ],
-      "env": [
-        "DB_HOST",
-        "DB_PORT",
-        "DB_USERNAME",
-        "DB_PASSWORD",
-        "DB_DATABASE",
-        "API_JWT_SECRET"
-      ]
+      "persistent": true
+    },
+    "front:dev": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
