--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/nestjs.json",
+  "extends": "@repo/typescript-config/nestjs.json",
   "compilerOptions": {
     "strictPropertyInitialization": false,
     "baseUrl": ".",
