--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,13 +35,15 @@
     "typeorm": "0.2"
   },
   "devDependencies": {
-    "@types/passport-jwt": "^4.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -55,7 +57,6 @@
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "@repo/typescript-config": "workspace:*",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
   }
