--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.2",
     "framer-motion": "^11.5.6",
+    "lucide-react": "^0.445.0",
     "next": "13.4.19",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "zod": "^3.23.8",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
